--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@studio-freight/lenis": "^1.0.42",
     "@tailwindcss/vite": "^4.2.0",
     "framer-motion": "^12.34.3",
     "gsap": "^3.14.2",
+    "lenis": "^1.3.17",
     "lucide-react": "^0.575.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-intersection-observer": "^10.0.3",
     "react-router-dom": "^7.13.0",
+    "split-type": "^0.3.4",
     "tailwindcss": "^4.2.0"
   },
   "devDependencies": {
